// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/mansub1029/reapchain-ipfs/grpc";


package grpc;

// The greeting service definition.
service Greeter {
  rpc SayTransactionInfo (TransactionRequest) returns (TransactionReply) {}
  rpc GetTransactionInfo (MetadataKey) returns (MetadataValue) {} 
}

// The response message containing the greetings
message TransactionReply {
  string message = 1;
}



message TransactionRequest { //TransactionRequest
  string blockHash =1;
  uint32 blockNumber =2;
  string txHash =3;
  string fromAddress = 4;
  string toAddress = 5;
  uint32 nonce=6;
  string cid=7;
  string blockchainName=8;
}

message MetadataKey {
  string cid = 1;
  string blockchainName = 2;
}

// The response message containing the greetings
message MetadataValue {
  string blockHash =1;
  uint32 blockNumber =2;
  string txHash =3;
  string fromAddress = 4;
  string toAddress = 5;
  uint32 nonce=6;
  string cid=7;
  string blockchainName=8;
}